# CryptoBot

./: EthStrategy.py  README.md  SimpleStrategy.py  TradeStrategy  TradeStrategy.py  config.json  config_eth.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  strategy.py
config/: config.json
docs/: agent.md
freqtrade/: configuration.py  enums.py  persistence.py
freqtrade/data/history/datahandlers/: jsondatahandler.py
freqtrade/optimize/: backtesting.py
freqtrade/resolvers/: exchange_resolver.py
freqtrade/strategy/: __init__.py
scripts/: run_backtest.sh  run_dryrun.sh  run_hyperopt.sh
src/core/: config.py  gpt_client.py  health.py  rate_limit.py  scheduler.py  storage.py
src/dashboard/: app.py
src/fetchers/: ccxt_orderbook.py  newsapi.py  reddit.py
src/models/: features.py  predict.py  trainer.py
src/pipeline/: sentiment.py  snapshot.py
tests/: test_backtesting.py  test_grid.py  test_indicators.py
user_data/: config.json
user_data/strategies/: ETHInventoryAware.py  VolatilityAdaptiveSpotV3.py
utils/: grid.py  indicators.py
