[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-sentiment-edge"
version = "0.1.0"
description = "Real-time crypto headline + order-book sentiment pipeline with GPT scoring and Streamlit dashboard."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.0",
    "httpx>=0.27",
    "ccxt>=4.1",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "pyarrow>=16.1",
    "lightgbm>=4.3",
    "scikit-learn>=1.5",
    "streamlit>=1.35",
    "cachetools>=5.3",
    "openai>=1.25",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/yourname/crypto-sentiment-edge"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src"]
include-package-data = true
